package fromsheets.drawingcontroller.withMediator;

import fromsheets.drawingcontroller.Drawing;

public class DrawingController {
    private Drawing drawing;
    private PersistencyMediator persistencyMediator;

   // TODO: add constructor/setter. add code for load&save

    public void load(String nameDrawing) {
        // todo: load a Drawing with given name
    }

    public void save() {
        // todo: save a drawing
    }

    public void redraw() {
        // todo: redraw the whole drawing
    }
}