@startuml

title __WITHMEDIATOR's Class Diagram__\n

  namespace fromsheets.drawingcontroller {
    namespace withMediator {
      class fromsheets.drawingcontroller.withMediator.DrawingController {
          + load()
          + redraw()
          + save()
      }
    }
  }
  

  namespace fromsheets.drawingcontroller {
    namespace withMediator {
      interface fromsheets.drawingcontroller.withMediator.PersistencyMediator {
          {abstract} + load()
          {abstract} + save()
      }
    }
  }
  

  fromsheets.drawingcontroller.withMediator.DrawingController o-- fromsheets.drawingcontroller.Drawing : drawing
  fromsheets.drawingcontroller.withMediator.DrawingController o-- fromsheets.drawingcontroller.withMediator.PersistencyMediator : persistencyMediator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
